Add working Circle CI :grin: (#7)
* CI: fix image name
* Docs: add build badge

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,15 +2,15 @@ version: 2
 jobs:
   build:
     docker:
-      - image: eriktim/docker-elm-ci
+      - image: trenneman/elm-ci
 
     steps:
       - checkout
 
       - run:
-        name: Build Elm
-        command: elm make
+          name: Build Elm
+          command: elm make
 
       - run:
-        name: Run Tests
-        command: elm-test
+          name: Run Tests
+          command: elm-test
