--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,5 +24,5 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install -g elm@0.19.1 elm-test@0.19.1 elm-format@0.8.3
+    - run: npm install -g elm@0.19.1-3 elm-test@0.19.1-revision2 elm-format@0.8.3
     - run: elm-test
