--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "devDependencies": {
     "elm": "^0.19.1-3",
     "elm-format": "^0.8.3",
-    "elm-test": "^0.19.1-revision2"
+    "elm-test": "0.19.1"
+  },
+  "scripts": {
+    "test": "elm-test tests"
   }
 }
