--- a/.github/workflows/deploy-examples.yml
+++ b/.github/workflows/deploy-examples.yml
@@ -20,11 +20,11 @@ jobs:
       with:
         node-version: 14.x
 
-    - name: Install
+    - name: Install project packages
       run: npm install
 
     - name: Build Examples
-      run: npm build-examples
+      run: npm run build-examples
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
