CI: build examples to dist/

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "test": "elm-test tests",
     "elm": "node_modules/.bin/elm",
-    "build-examples": "cd examples && npx elm make Suzanne.elm --output suzanne.html && npx elm make ElmLogo.elm --output elm-logo.html"
+    "clean": "rm -rf dist/",
+    "build-examples": "npm run clean && cp -r examples/ dist/ && cd dist && npx elm make Suzanne.elm --output suzanne.html && npx elm make ElmLogo.elm --output elm-logo.html && rm -rf *.elm elm-stuff/"
   }
 }
