--- a/.github/workflows/deploy-examples.yml
+++ b/.github/workflows/deploy-examples.yml
@@ -8,7 +8,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  deploy:
 
     runs-on: ubuntu-latest
 
@@ -25,6 +25,8 @@ jobs:
 
     - name: Build Examples
       run: npm run build-examples
+
+    - run: ls -l dist/
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
